<resources>
    <string name="app_name" translatable="false">ProyectoDAM</string>

    <!-- Buenas -->
    <string name="logotxt" translatable="false">IFlyNow</string>

    <!-- Navigation -->
    <string name="title_activity_home">Home</string>
    <string name="nav_header_title" translatable="false">I Fly Now</string>
    <string name="nav_header_subtitle" translatable="false">ceo@iflynow.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_news">News</string>
    <string name="menu_fleet">Fleet</string>
    <string name="menu_login">Login</string>
    <string name="pass">Password</string>
    <string name="user">Username</string>
    <string name="account">Account</string>
    <string name="title_activity_usermain" translatable="false">Usermain</string>
    <string name="title_home">Home</string>
    <string name="title_tools">Tools</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_user">Home</string>
    <string name="design">Designed by Gabriel</string>

    <!--Admin-->
    <string name="newuser">New User</string>
    <string name="subjects">Subjects</string>
    <string name="C172" translatable="false">C172</string>
    <string name="P28R" translatable="false">P28R</string>
    <string name="P06T" translatable="false">P06T</string>
    <string name="createuser">Create User</string>
    <string name="newwaypoint">New Waypoint</string>
    <string name="waypointname">Name</string>
    <string name="lat">Latitude</string>
    <string name="lon">Longitude</string>
    <string name="add">Add</string>
    <string name="newQuestion">New Question</string>
    <string name="statement">Statement</string>
    <string name="answer1">Answer 1</string>
    <string name="answer2">Answer 2</string>
    <string name="answer3">Answer 3</string>
    <string name="answer4">Answer 4</string>
    <string name="newnews">New News</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="selectimage">Click to select image</string>
    <string name="link">Link (Optional)</string>
    <string name="newexist">New already exists</string>

    <!--User-->
    <string name="welcome">Welcome back %s</string>
    <string name="progress" translatable="false">%s %%</string>
    <string name="flights">Flights</string>
    <string name="weather">Weather reports</string>
    <string name="logout">Log out</string>
    <string name="charts">Charts</string>
    <string name="flightplanner">Flight planner</string>

    <!--Settings-->
    <string name="daynight">Dark mode</string>
    <string name="languange">Language</string>
    <string name="select">Select</string>
    <string name="es">Spanish</string>
    <string name="en">English</string>

    <!--Weather-->
    <string name="metar" translatable="false">METAR</string>
    <string name="taf" translatable="false">TAF</string>
    <string name="weatherinfo" translatable="false">ICAO</string>
    <string name="near">Search near</string>
    <string name="favourite">Favourite</string>
    <string name="historical">Historical</string>
    <string name="remove">Remove</string>

    <!--Code-->
    <string name="fillfields">Fill in the fields</string>
    <string name="errornewuser">Error creating user</string>
    <string name="locationerror">For near stations you need to accept location permission</string>
    <string name="emptyfield">Empty field</string>
    <string name="wrongicao">Wrong ICAO</string>
    <string name="writepermission">Required permission to save file</string>
    <string name="writepermissiontitle">Grant write permission</string>
    <string name="cancel">Cancel</string>
    <string name="usercreated">User created</string>
    <string name="error">Error</string>
    <string name="writesuccess">Successfully added</string>
    <string name="lockedcontent">Locked content</string>
    <string name="distance" translatable="false">%.1f NM</string>
    <string name="heading" translatable="false">%s º</string>
    <string name="metarerror">Metar not found</string>
    <string name="endtest">End test?</string>
    <string name="testdialog">Confirm you have finished answering all questions. Not answered questions would count as a wrong answer</string>
    <string name="checkinternet">Check internet connection</string>
    <string name="filealreadydownloaded">File has already been downloaded into download directory</string>
    <string name="timesup">Time has finished</string>
    <string name="timesupdialog">The time is over for this test</string>
    <string name="emptyicao">Introduce one ICAO at least</string>
    <string name="passlength">Password must contain at least 6 characters</string>
    <string name="wip" translatable="false">Work In Progress</string>
    <string name="date" translatable="false">%d/%d/%d</string>

    <!--Flights-->
    <string name="lock" translatable="false">Lock</string>
    <string name="c712poh" translatable="false">C172 POH</string>
    <string name="download">Download</string>
    <string name="manuals">Manuals</string>
    <string name="tests">Tests</string>
    <string name="start">Start</string>

    <!--Subjects-->
    <string name="airlaw">Air Law</string>
    <string name="airframe">Airframes and systems</string>
    <string name="instrumentation">Instrumentation</string>
    <string name="massbalance">Mass &amp; Balance</string>
    <string name="performance">Performance</string>
    <string name="planning">Flight Planning</string>
    <string name="human">Human Performance</string>
    <string name="meteo">Meteorology</string>
    <string name="nav">General Navigation</string>
    <string name="radio">Radio Navigation</string>
    <string name="pop">Operational Procedures</string>
    <string name="principles">Principles of Flight</string>
    <string name="comms">Communications</string>
    <string name="content">Content</string>

    <!--Flight planner-->
    <string name="create">Create</string>
    <string name="search">Search</string>

    <!--Home-->
    <string name="madrid" translatable="false"><u>Madrid</u></string>
    <string name="madriddir" translatable="false">Edificio AEROTEC, Aeropuerto de Cuatro Vientos, 28054 Madrid</string>
    <string name="madridtlf" translatable="false">+34 915 080 359</string>
    <string name="maps">Open google maps</string>
    <string name="call">Make phone call</string>
    <string name="hall">Hall</string>

    <!--C172-->
    <string name="c172test">C172 Test</string>
    <string name="counter" translatable="false">%s:%s</string>
    <string name="submit">Submit</string>
    <string name="grade" translatable="false">%s/10</string>

</resources>