<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.gabrifermar.proyectodam.view.fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_news"
            app:popUpTo="@id/nav_home" />
        <action
            android:id="@+id/action_nav_home_to_nav_slideshow"
            app:destination="@id/nav_fleet"
            app:popUpTo="@id/nav_home" />
        <action
            android:id="@+id/action_nav_home_to_login2"
            app:destination="@id/nav_login"
            app:popUpTo="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_news"
        android:name="com.gabrifermar.proyectodam.view.fragment.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/nav_fleet"
        android:name="com.gabrifermar.proyectodam.view.fragment.FleetFragment"
        android:label="@string/menu_fleet"
        tools:layout="@layout/fragment_fleet" />
    <fragment
        android:id="@+id/nav_login"
        android:name="com.gabrifermar.proyectodam.view.fragment.Login"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />
</navigation>