<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewUser">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/txtnewuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/user"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck"
            tools:layout_editor_absoluteX="65dp"
            tools:layout_editor_absoluteY="188dp" />

        <EditText
            android:id="@+id/txtnewpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="password"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck"
            tools:layout_editor_absoluteX="75dp"
            tools:layout_editor_absoluteY="291dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="50dp"
            >


        <CheckBox
            android:id="@+id/cbnewuser1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subjects"
            tools:layout_editor_absoluteX="49dp"
            tools:layout_editor_absoluteY="449dp" />

        <CheckBox
            android:id="@+id/cbnewuser2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/C172"
            tools:layout_editor_absoluteX="208dp"
            tools:layout_editor_absoluteY="446dp" />

        <CheckBox
            android:id="@+id/cbnewuser3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/P28R"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="537dp" />

        <CheckBox
            android:id="@+id/cbnewuser4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/P06T"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="537dp" />

        </LinearLayout>

        <Button
            android:id="@+id/btncreateuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/createuser"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>