<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.NewNews">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <EditText
            android:id="@+id/admin_newnews_et_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".8"
            android:background="@drawable/custom_input"
            android:gravity="center"
            android:hint="@string/title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:layout_marginEnd="5dp"
            android:minWidth="150dp"
            android:minHeight="48dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/admin_newnews_tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_gravity="center"
            android:layout_weight="0.1" />

        <Button
            android:id="@+id/admin_newnews_btn_calendar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight=".1"
            android:background="@drawable/ic_baseline_calendar" />

    </LinearLayout>

    <EditText
        android:id="@+id/admin_newnews_et_description"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_input"
        android:gravity="center"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/admin_newnews_et_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_input"
        android:gravity="center"
        android:hint="@string/link"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        tools:ignore="TextContrastCheck" />


    <RelativeLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/myImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:contentDescription="@string/selectimage"
            android:focusable="true" />

        <TextView
            android:id="@+id/myImageViewText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignStart="@+id/myImageView"
            android:layout_alignTop="@+id/myImageView"
            android:layout_alignEnd="@+id/myImageView"
            android:layout_alignBottom="@+id/myImageView"
            android:layout_margin="1dp"
            android:gravity="center"
            android:hint="@string/selectimage"
            android:textColor="#000000" />
    </RelativeLayout>

    <Button
        android:id="@+id/admin_newnews_btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add" />

</LinearLayout>